[package]
name = "grrs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
confy = "0.6.1"
crossbeam-channel = "0.5.14"
ctrlc = "3.4.5"
serde = { version = "1.0.219", features = ["derive"] }
signal-hook = "0.3.17"
structopt = "0.3.26"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"
